Changes for 3.0.5rc1

New features:

Bug fixes:
........S. [ZBX-10759] fixed trigger prototypes status when host become unavailable (Sergejs)
........S. [ZBX-10971] fixed memory leak when action is removed from configuration (Sergejs)
........S. [ZBX-10721] made the third parameter (<port>) of "net.tcp.service" optional (Sergejs)
...G...... [ZBX-11015] fixed proc.cpu.util for non-privileged agent on Solaris (Sandis)
........S. [ZBX-10753] fixed server reconnection attempts to MySQL on start and while running in case MySQL stopped or restarting (viktors)
........S. [ZBX-11012] fixed expansion of macro {DISCOVERY.RULE.NAME} (viktors)
..F....... [ZBX-10504] reduced padding around graphs to account for decreased padding in CSS (asaveljevs)
..F....... [ZBX-10591] fixed header widget being broken by selects with long values (asaveljevs, Pavel)
..F....... [ZBX-10987] fixed table header line not being visible in dark theme (Pavel)
........S. [ZBX-10797] fixed evaluation of user macros in calculated items (Andris)

--------------------------------------------------------------------------------
Changes for 3.0.4

New features:
A.F....... [ZBX-1357] updated Chinese (China), Czech, French, German, Italian, Japanese, Polish, Portuguese (Brazil), Russian, Slovak translations; thanks to Zabbix translators (zalex_ua)

Bug fixes:
..F....... [ZBX-11023] fixed SQL injection vulnerability in "Latest data" page; thanks to 1N3 at Early Warning Services, LLC (Sasha)

--------------------------------------------------------------------------------
Changes for 3.0.4rc1

Bug fixes:
........S. [ZBX-10907] fixed remote command execution via SSH with no Zabbix agent interface (viktors)
.......PS. [ZBX-6370] added ability to monitor SNMP devices returning OIDs in decreasing or mixed order (Andris)
..F....... [ZBX-10918] fixed severity filter in map.view action (Cemeris, Gunars)
..F....... [ZBX-10840] fixed selecting of group in popup page filter (Gunars)